Home page Complited

--- a/public/appData.json
+++ b/public/appData.json
@@ -8,7 +8,7 @@
         "downloads": 3500000,
         "category": "Education",
         "rating": 4.8,
-        "description": "Programming Hero is a fun and interactive way to learn programming. Whether you're a beginner or looking to brush up your skills, this app makes learning to code exciting and practical.",
+        "description": "Programming Hero offers a gamified, step-by-step learning journey through real-world programming tasks, making coding engaging and enjoyable.",
         "features": [
             "Interactive coding lessons",
             "Real-world projects",
@@ -31,7 +31,7 @@
         "downloads": 1500000,
         "category": "Productivity",
         "rating": 4.5,
-        "description": "TaskMaster Pro helps you organize your tasks efficiently with intuitive design and powerful features.",
+        "description": "TaskMaster Pro is your smart to-do list companion with sleek UI, team sharing options, and powerful scheduling capabilities.",
         "features": [
             "Smart task scheduling",
             "Real-time collaboration",
@@ -54,7 +54,7 @@
         "downloads": 800000,
         "category": "Productivity",
         "rating": 4.7,
-        "description": "Boost your productivity by managing your time effectively using the Pomodoro technique.",
+        "description": "FocusTime helps boost concentration using Pomodoro cycles, analytics, and distraction blockers to help you stay in the zone.",
         "features": [
             "Customizable focus sessions",
             "Detailed productivity reports",
@@ -77,7 +77,7 @@
         "downloads": 1200000,
         "category": "Productivity",
         "rating": 4.6,
-        "description": "Capture your thoughts and ideas seamlessly with NoteWise's intuitive note-taking features.",
+        "description": "NoteWise provides a fast and flexible platform for jotting down ideas, organizing notes, and syncing across devices instantly.",
         "features": [
             "Rich text formatting",
             "Cloud synchronization",
@@ -100,7 +100,7 @@
         "downloads": 5000000,
         "category": "Gaming",
         "rating": 4.8,
-        "description": "Defend the galaxy from alien invaders in this action-packed space shooter game.",
+        "description": "Galaxy Invaders is a high-speed alien shooter with stunning visuals, epic bosses, and exciting missions in space.",
         "features": [
             "Multiple game modes",
             "Upgradeable weapons",
@@ -123,7 +123,7 @@
         "downloads": 2000000,
         "category": "Gaming",
         "rating": 4.4,
-        "description": "Challenge your mind with a variety of puzzles and brain teasers.",
+        "description": "Solve mind-twisting puzzles across hundreds of themed levels with beautiful graphics and brain-boosting logic.",
         "features": [
             "Hundreds of levels",
             "Daily challenges",
@@ -146,7 +146,7 @@
         "downloads": 3000000,
         "category": "Gaming",
         "rating": 4.6,
-        "description": "Experience high-speed racing with realistic physics and stunning visuals.",
+        "description": "Race through intense tracks with realistic car physics, upgrades, and real-time online matches.",
         "features": [
             "Multiple car models",
             "Dynamic weather conditions",
@@ -169,7 +169,7 @@
         "downloads": 2500000,
         "category": "Education",
         "rating": 4.9,
-        "description": "Master new languages with interactive lessons and real-life conversations.",
+        "description": "LearnLang provides immersive and adaptive language learning with speech recognition, real conversations, and engaging cultural insights.",
         "features": [
             "Speech recognition",
             "Daily practice reminders",
@@ -192,7 +192,7 @@
         "downloads": 1000000,
         "category": "Education",
         "rating": 4.7,
-        "description": "Enhance your math skills with engaging exercises and quizzes.",
+        "description": "Math Genius is designed to make learning math exciting through interactive quizzes, colorful visuals, and reward-based progress tracking.",
         "features": [
             "Grade-wise content",
             "Progress tracking",
@@ -215,7 +215,7 @@
         "downloads": 750000,
         "category": "Education",
         "rating": 4.5,
-        "description": "Travel through time and learn about significant historical events.",
+        "description": "History Explorer turns learning history into an adventure with immersive timelines, interactive maps, and knowledge games.",
         "features": [
             "Timeline navigation",
             "Interactive maps",
@@ -238,7 +238,7 @@
         "downloads": 1800000,
         "category": "Health & Fitness",
         "rating": 4.8,
-        "description": "Achieve your fitness goals with personalized workout plans and tracking.",
+        "description": "Track your workouts, set fitness goals, and follow tailored routines to stay in shape with FitLife.",
         "features": [
             "Custom workout routines",
             "Dietary recommendations",
@@ -261,7 +261,7 @@
         "downloads": 900000,
         "category": "Health & Fitness",
         "rating": 4.6,
-        "description": "Reduce stress and improve sleep with guided meditations and calming sounds.",
+        "description": "MindRelax is your go-to mental health app for guided meditation, sleep stories, and anxiety relief tools.",
         "features": [
             "Sleep stories",
             "Breathing exercises",
@@ -284,7 +284,7 @@
         "downloads": 1100000,
         "category": "Health & Fitness",
         "rating": 4.9,
-        "description": "Practice yoga anytime, anywhere with guided sessions for all levels.",
+        "description": "Follow professionally guided yoga sessions for every level to improve your flexibility, balance, and well-being.",
         "features": [
             "Beginner to advanced classes",
             "Pose library",
@@ -295,6 +295,75 @@
                 "user": "yoga_enthusiast",
                 "rating": 5,
                 "comment": "Excellent app for daily yoga practice!"
+            }
+        ]
+    },
+    {
+        "id": "app013",
+        "name": "WorkFlow Zen",
+        "developer": "Zen Productivity",
+        "thumbnail": "https://i.ibb.co/placeholder/workflow-zen-thumb.jpg",
+        "banner": "https://i.ibb.co/placeholder/workflow-zen-banner.jpg",
+        "downloads": 950000,
+        "category": "Productivity",
+        "rating": 4.4,
+        "description": "WorkFlow Zen helps optimize your day with smart prioritization, project timelines, and calendar sync.",
+        "features": [
+            "Task priority AI",
+            "Gantt chart views",
+            "Calendar integrations"
+        ],
+        "reviews": [
+            {
+                "user": "zen_worker",
+                "rating": 4,
+                "comment": "Excellent for managing complex projects and daily tasks together."
+            }
+        ]
+    },
+    {
+        "id": "app014",
+        "name": "Monster Clash Arena",
+        "developer": "BattleGround Devs",
+        "thumbnail": "https://i.ibb.co/placeholder/monster-clash-thumb.jpg",
+        "banner": "https://i.ibb.co/placeholder/monster-clash-banner.jpg",
+        "downloads": 2600000,
+        "category": "Gaming",
+        "rating": 4.7,
+        "description": "Summon monsters and battle in real-time multiplayer arenas using strategy and skill to climb the ranks.",
+        "features": [
+            "Monster collection",
+            "Arena mode",
+            "Daily rewards"
+        ],
+        "reviews": [
+            {
+                "user": "arena_champ",
+                "rating": 5,
+                "comment": "Addictive and beautifully designed!"
+            }
+        ]
+    },
+    {
+        "id": "app015",
+        "name": "HealthyBites",
+        "developer": "NutriTech",
+        "thumbnail": "https://i.ibb.co/placeholder/healthybites-thumb.jpg",
+        "banner": "https://i.ibb.co/placeholder/healthybites-banner.jpg",
+        "downloads": 700000,
+        "category": "Health & Fitness",
+        "rating": 4.5,
+        "description": "HealthyBites gives personalized meal plans, nutritional advice, and healthy recipes to meet your fitness goals.",
+        "features": [
+            "Meal planning",
+            "Nutritional tracking",
+            "Recipe recommendations"
+        ],
+        "reviews": [
+            {
+                "user": "foodie_fit",
+                "rating": 5,
+                "comment": "A lifesaver for planning healthy meals!"
             }
         ]
     }
