Authication problem solved

--- a/public/appData.json
+++ b/public/appData.json
@@ -118,8 +118,8 @@
         "id": "app005",
         "name": "Puzzle Quest",
         "developer": "Brainy Games",
-        "thumbnail": "https://i.ibb.co/placeholder/puzzle-quest-thumb.jpg",
-        "banner": "https://i.ibb.co/placeholder/puzzle-quest-banner.jpg",
+        "thumbnail": "https://i.ibb.co.com/HD9nv2Cg/Leonardo-Phoenix-10-Within-the-Puzzle-Quest-app-thumbnail-an-i-2.jpg",
+        "banner": "https://i.ibb.co.com/prjWdfMr/Leonardo-Phoenix-10-The-original-Puzzle-Quest-app-thumbnail-wi-2.jpg",
         "downloads": 2000000,
         "category": "Gaming",
         "rating": 4.4,
