Coment Box Complited

--- a/public/appData.json
+++ b/public/appData.json
@@ -99,7 +99,7 @@
         "banner": "https://i.ibb.co.com/rCbTyxq/04.png",
         "downloads": 5000000,
         "category": "Gaming",
-        "rating": 4.8,
+        "rating": 4.6,
         "description": "Galaxy Invaders is a high-speed alien shooter with stunning visuals, epic bosses, and exciting missions in space.",
         "features": [
             "Multiple game modes",
@@ -141,11 +141,11 @@
         "id": "app006",
         "name": "Racing Thunder",
         "developer": "FastTrack Studios",
-        "thumbnail": "https://i.ibb.co/placeholder/racing-thunder-thumb.jpg",
-        "banner": "https://i.ibb.co/placeholder/racing-thunder-banner.jpg",
+        "thumbnail": "https://i.ibb.co.com/20jJwm13/6-1.jpg",
+        "banner": "https://i.ibb.co.com/BHPLpycH/6-2.jpg",
         "downloads": 3000000,
         "category": "Gaming",
-        "rating": 4.6,
+        "rating": 4.8,
         "description": "Race through intense tracks with realistic car physics, upgrades, and real-time online matches.",
         "features": [
             "Multiple car models",
@@ -164,8 +164,8 @@
         "id": "app007",
         "name": "LearnLang",
         "developer": "EduTech Corp.",
-        "thumbnail": "https://i.ibb.co/placeholder/learnlang-thumb.jpg",
-        "banner": "https://i.ibb.co/placeholder/learnlang-banner.jpg",
+        "thumbnail": "https://i.ibb.co.com/7Jg46xQ4/7.jpg",
+        "banner": "https://i.ibb.co.com/7Jg46xQ4/7.jpg",
         "downloads": 2500000,
         "category": "Education",
         "rating": 4.9,
@@ -187,8 +187,8 @@
         "id": "app008",
         "name": "Math Genius",
         "developer": "SmartKids Inc.",
-        "thumbnail": "https://i.ibb.co/placeholder/math-genius-thumb.jpg",
-        "banner": "https://i.ibb.co/placeholder/math-genius-banner.jpg",
+        "thumbnail": "https://i.ibb.co.com/hRd1Q6tc/8.jpg",
+        "banner": "https://i.ibb.co.com/hRd1Q6tc/8.jpg",
         "downloads": 1000000,
         "category": "Education",
         "rating": 4.7,
@@ -210,8 +210,8 @@
         "id": "app009",
         "name": "History Explorer",
         "developer": "EduWorld",
-        "thumbnail": "https://i.ibb.co/placeholder/history-explorer-thumb.jpg",
-        "banner": "https://i.ibb.co/placeholder/history-explorer-banner.jpg",
+        "thumbnail": "https://i.ibb.co.com/dJQ5KrDy/9.jpg",
+        "banner": "https://i.ibb.co.com/dJQ5KrDy/9.jpg",
         "downloads": 750000,
         "category": "Education",
         "rating": 4.5,
@@ -233,8 +233,8 @@
         "id": "app010",
         "name": "FitLife",
         "developer": "HealthFirst",
-        "thumbnail": "https://i.ibb.co/placeholder/fitlife-thumb.jpg",
-        "banner": "https://i.ibb.co/placeholder/fitlife-banner.jpg",
+        "thumbnail": "https://i.ibb.co.com/Xf0ykx26/10-removebg-preview.png",
+        "banner": "https://i.ibb.co.com/Xf0ykx26/10-removebg-preview.png",
         "downloads": 1800000,
         "category": "Health & Fitness",
         "rating": 4.8,
@@ -256,8 +256,8 @@
         "id": "app011",
         "name": "MindRelax",
         "developer": "Wellness Apps",
-        "thumbnail": "https://i.ibb.co/placeholder/mindrelax-thumb.jpg",
-        "banner": "https://i.ibb.co/placeholder/mindrelax-banner.jpg",
+        "thumbnail": "https://i.ibb.co.com/8DGQqN48/11.jpg",
+        "banner": "https://i.ibb.co.com/8DGQqN48/11.jpg",
         "downloads": 900000,
         "category": "Health & Fitness",
         "rating": 4.6,
@@ -279,8 +279,8 @@
         "id": "app012",
         "name": "YogaFlow",
         "developer": "Zen Studios",
-        "thumbnail": "https://i.ibb.co/placeholder/yogaflow-thumb.jpg",
-        "banner": "https://i.ibb.co/placeholder/yogaflow-banner.jpg",
+        "thumbnail": "https://i.ibb.co.com/67kG9DnJ/12-1.jpg",
+        "banner": "https://i.ibb.co.com/S43S0CTs/12-2.jpg",
         "downloads": 1100000,
         "category": "Health & Fitness",
         "rating": 4.9,
