--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-router": "^7.5.3",
+    "react-toastify": "^11.0.5",
     "styled-components": "^6.1.17",
+    "sweetalert2": "^11.21.0",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
