My profile page added

--- a/public/appData.json
+++ b/public/appData.json
@@ -302,8 +302,8 @@
         "id": "app013",
         "name": "WorkFlow Zen",
         "developer": "Zen Productivity",
-        "thumbnail": "https://i.ibb.co/placeholder/workflow-zen-thumb.jpg",
-        "banner": "https://i.ibb.co/placeholder/workflow-zen-banner.jpg",
+        "thumbnail": "https://i.ibb.co.com/k6D49qPt/13.jpg",
+        "banner": "https://i.ibb.co.com/k6D49qPt/13.jpg",
         "downloads": 950000,
         "category": "Productivity",
         "rating": 4.4,
@@ -325,8 +325,8 @@
         "id": "app014",
         "name": "Monster Clash Arena",
         "developer": "BattleGround Devs",
-        "thumbnail": "https://i.ibb.co/placeholder/monster-clash-thumb.jpg",
-        "banner": "https://i.ibb.co/placeholder/monster-clash-banner.jpg",
+        "thumbnail": "https://i.ibb.co.com/GGZYWM3/14.jpg",
+        "banner": "https://i.ibb.co.com/GGZYWM3/14.jpg",
         "downloads": 2600000,
         "category": "Gaming",
         "rating": 4.7,
@@ -348,8 +348,8 @@
         "id": "app015",
         "name": "HealthyBites",
         "developer": "NutriTech",
-        "thumbnail": "https://i.ibb.co/placeholder/healthybites-thumb.jpg",
-        "banner": "https://i.ibb.co/placeholder/healthybites-banner.jpg",
+        "thumbnail": "https://i.ibb.co.com/jZTh4h0N/15.jpg",
+        "banner": "https://i.ibb.co.com/jZTh4h0N/15.jpg",
         "downloads": 700000,
         "category": "Health & Fitness",
         "rating": 4.5,
